# api-helper

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.cargo/: config.toml
docs/: PRD.md  UX-DESIGN.md  WIREFRAME.md
scripts/: fix-tauri-html.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ws.rs
src/components/: ErrorBoundary.tsx
src/components/drawers/: EnvDrawer.tsx
src/components/layout/: ConfigPanel.tsx  HistorySidebar.tsx  RequestBar.tsx  ResponsePanel.tsx  ResultPanel.tsx  StatusBar.tsx  TopBar.tsx  WebSocketPanel.tsx
src/components/settings/: SettingsDialog.tsx
src/components/ui/: ActionMenu.tsx  Button.tsx  CodeEditor.tsx  ConfigTabs.tsx  DropdownSelect.tsx  KeyValueTable.tsx  Pill.tsx  Select.tsx
src/hooks/: usePersistence.ts  useWebSocketEvents.ts
src/lib/: crypto.ts  files.ts  http.ts  importExport.ts  preScript.ts  storage.ts  utils.ts  ws.ts
src/store/: appStore.ts
src/types/: index.ts
